fix profile picture border spacing

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,4 +1,4 @@
-header {
+.center-header {
   display: flex;
   justify-content: center;
   height: 54px;
@@ -9,7 +9,7 @@ header {
 .header-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  height: 54px;
+  grid-template-rows: 54px;
   position: fixed;
   box-sizing: border-box;
   width: 100vw;
@@ -55,17 +55,19 @@ header {
 .header-container .nav img {
   margin: 0 10px;
   width: 26px;
+  height: 26px;
   cursor: pointer;
 }
 
 .header-container .nav .profile-border {
+  padding: 0;
   margin: 0 10px;
   display: inline-flex;
   border: 1px solid rgba(0, 0, 0, 0.0975);
   background-color: rgb(250, 250, 250);
   border-radius: 50%;
-  width: 26px;
-  height: 26px;
+  width: max-content;
+  height: max-content;
   overflow: hidden;
 }
 
